Update loss visualization

--- a/battery-rul-estimation/experiments/nasa-randomized/autoencoder_nasa.ipynb
+++ b/battery-rul-estimation/experiments/nasa-randomized/autoencoder_nasa.ipynb
@@ -2,16 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "source": [
-    "# Autoencoder Nasa Randomized dataset"
-   ],
    "metadata": {
     "id": "jw9FMur02UtZ"
-   }
+   },
+   "source": [
+    "# Autoencoder Nasa Randomized dataset"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "id": "XKxZ90kO2Uta"
+   },
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -48,45 +52,45 @@
     "sys.path.append(data_path)\n",
     "from data_processing.nasa_random_data import NasaRandomizedData\n",
     "from data_processing.prepare_rul_data import RulHandler"
-   ],
-   "outputs": [],
-   "metadata": {
-    "id": "XKxZ90kO2Uta"
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "### Config logging"
-   ],
    "metadata": {
     "id": "MfVCRISs2Utc"
-   }
+   },
+   "source": [
+    "### Config logging"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "id": "K2IvySBk2Utd"
+   },
+   "outputs": [],
    "source": [
     "reload(logging)\n",
     "logging.basicConfig(format='%(asctime)s [%(levelname)s]: %(message)s', level=logging.DEBUG, datefmt='%Y/%m/%d %H:%M:%S')"
-   ],
-   "outputs": [],
-   "metadata": {
-    "id": "K2IvySBk2Utd"
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "# Load Data"
-   ],
    "metadata": {
     "id": "KsbkwTX22Utf"
-   }
+   },
+   "source": [
+    "# Load Data"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "id": "NSFp-2Rl2Utj"
+   },
+   "outputs": [],
    "source": [
     "train_names_20k = [\n",
     "        'Battery_Uniform_Distribution_Variable_Charge_Room_Temp_DataSet_2Post/data/Matlab/RW1',\n",
@@ -137,36 +141,37 @@
     "test_names_no_100k = [\n",
     "        'RW_Skewed_High_Room_Temp_DataSet_2Post/data/Matlab/RW20',\n",
     "]"
-   ],
-   "outputs": [],
-   "metadata": {
-    "id": "NSFp-2Rl2Utj"
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "id": "k-yTrXQ12Utm"
+   },
+   "outputs": [],
    "source": [
     "nasa_data_handler = NasaRandomizedData(data_path)\n",
     "rul_handler = RulHandler()"
-   ],
-   "outputs": [],
-   "metadata": {
-    "id": "k-yTrXQ12Utm"
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## Data preparation"
-   ],
    "metadata": {
     "id": "bAAxueIqkZM9"
-   }
+   },
+   "source": [
+    "## Data preparation"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "id": "TbntMzBZkZM9",
+    "tags": []
+   },
+   "outputs": [],
    "source": [
     "(train_x_10k, _, test_x_10k, _, battery_range_cycle_train_10k, battery_range_cycle_test_10k, _, _, _, _) = nasa_data_handler.get_discharge_whole_cycle_future(train_names_10k, test_names_10k)\n",
     "(train_x_20k, _, test_x_20k, _, _, _, _, _, _, _) = nasa_data_handler.get_discharge_whole_cycle_future(train_names_20k, test_names_20k)\n",
@@ -204,25 +209,24 @@
     "\n",
     "x_norm = rul_handler.Normalization()\n",
     "train_x, test_x = x_norm.normalize(train_x, test_x)"
-   ],
-   "outputs": [],
-   "metadata": {
-    "id": "TbntMzBZkZM9",
-    "tags": []
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "# Model training"
-   ],
    "metadata": {
     "id": "7iYU-n0K2Utq"
-   }
+   },
+   "source": [
+    "# Model training"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "id": "LSx96n4w2Uts"
+   },
+   "outputs": [],
    "source": [
     "if IS_TRAINING:\n",
     "    EXPERIMENT = \"autoencoder_nasa_randomized\"\n",
@@ -267,15 +271,15 @@
     "autoencoder.compile(optimizer=opt, loss='mse', metrics=['mse', 'mae', 'mape', tf.keras.metrics.RootMeanSquaredError(name='rmse')])\n",
     "autoencoder.encoder.summary()\n",
     "autoencoder.decoder.summary()"
-   ],
-   "outputs": [],
-   "metadata": {
-    "id": "LSx96n4w2Uts"
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "id": "AIEcv6Ey2Utu"
+   },
+   "outputs": [],
    "source": [
     "if IS_TRAINING:\n",
     "    history = autoencoder.fit(train_x, train_x,\n",
@@ -284,15 +288,15 @@
     "                                verbose=1,\n",
     "                                validation_split=0.1\n",
     "                               )"
-   ],
-   "outputs": [],
-   "metadata": {
-    "id": "AIEcv6Ey2Utu"
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "id": "oNHlqcvP2Utx"
+   },
+   "outputs": [],
    "source": [
     "if IS_TRAINING:\n",
     "    autoencoder.save_weights(data_path + 'results/trained_model/%s/model' % experiment_name)\n",
@@ -302,48 +306,48 @@
     "    with open(hist_csv_file, mode='w') as f:\n",
     "        hist_df.to_csv(f)\n",
     "    history = history.history"
-   ],
-   "outputs": [],
-   "metadata": {
-    "id": "oNHlqcvP2Utx"
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "if not IS_TRAINING:\n",
     "    history = pd.read_csv(data_path + 'results/trained_model/%s/history.csv' % RESULT_NAME)\n",
     "    autoencoder.load_weights(data_path + 'results/trained_model/%s/model' % RESULT_NAME)\n",
     "    autoencoder.encoder.summary()\n",
     "    autoencoder.decoder.summary()"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "if not IS_TRAINING:\n",
     "    with pd.option_context('display.max_rows', None, 'display.max_columns', None):\n",
     "        print(history)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "### Testing"
-   ],
    "metadata": {
     "id": "LH5RANQIEQVx"
-   }
+   },
+   "source": [
+    "### Testing"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "id": "ggNKW-VqENFN"
+   },
+   "outputs": [],
    "source": [
     "results = autoencoder.evaluate(test_x, test_x, return_dict = True)\n",
     "print(results)\n",
@@ -352,29 +356,30 @@
     "    result = autoencoder.evaluate(np.array([test_x[index, :, :]]), np.array([test_x[index, :, :]]), return_dict = True, verbose=0)\n",
     "    max_rmse = max(max_rmse, result['rmse'])\n",
     "print(\"Max rmse: {}\".format(max_rmse))"
-   ],
-   "outputs": [],
-   "metadata": {
-    "id": "ggNKW-VqENFN"
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "# Results Visualization"
-   ],
    "metadata": {
     "id": "uiqyD8Bn2Utz"
-   }
+   },
+   "source": [
+    "# Results Visualization"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "id": "jH9RrBRN2Utz"
+   },
+   "outputs": [],
    "source": [
     "fig = go.Figure()\n",
     "fig.add_trace(go.Scatter(y=history['loss'],\n",
     "                    mode='lines', name='train'))\n",
-    "fig.add_trace(go.Scatter(y=history['val_loss'],\n",
+    "if 'val_loss' in history:\n",
+    "    fig.add_trace(go.Scatter(y=history['val_loss'],\n",
     "                    mode='lines', name='validation'))\n",
     "fig.update_layout(title='Loss trend',\n",
     "                  xaxis_title='epoch',\n",
@@ -382,25 +387,23 @@
     "                  width=1400,\n",
     "                  height=600)\n",
     "fig.show()"
-   ],
-   "outputs": [],
-   "metadata": {
-    "id": "jH9RrBRN2Utz"
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "train_predictions = autoencoder.predict(train_x)\n",
     "labels = ['Voltage', 'Current', 'Temperature']"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "for i in range(train_x.shape[2]):\n",
     "    fig = go.Figure()\n",
@@ -414,13 +417,13 @@
     "                    width=1400,\n",
     "                    height=600)\n",
     "    fig.show()"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "for i in range(train_x.shape[2]):\n",
     "    fig = go.Figure()\n",
@@ -434,13 +437,13 @@
     "                    width=1400,\n",
     "                    height=600)\n",
     "    fig.show()"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "for i in range(train_x.shape[2]):\n",
     "    fig = go.Figure()\n",
@@ -454,23 +457,23 @@
     "                    width=1400,\n",
     "                    height=600)\n",
     "    fig.show()"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "test_predictions = autoencoder.predict(test_x)\n",
     "labels = ['Voltage', 'Current', 'Temperature']"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "for i in range(train_x.shape[2]):\n",
     "    fig = go.Figure()\n",
@@ -484,13 +487,13 @@
     "                    width=1400,\n",
     "                    height=600)\n",
     "    fig.show()"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "for i in range(train_x.shape[2]):\n",
     "    fig = go.Figure()\n",
@@ -504,13 +507,13 @@
     "                    width=1400,\n",
     "                    height=600)\n",
     "    fig.show()"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "for i in range(train_x.shape[2]):\n",
     "    fig = go.Figure()\n",
@@ -524,16 +527,14 @@
     "                    width=1400,\n",
     "                    height=600)\n",
     "    fig.show()"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": []
   }
  ],
  "metadata": {
