--- a/battery-rul-estimation/experiments/unibo-powertools/vae_unibo.ipynb
+++ b/battery-rul-estimation/experiments/unibo-powertools/vae_unibo.ipynb
@@ -444,6 +444,9 @@
     "fig = go.Figure()\n",
     "fig.add_trace(go.Scatter(y=history['loss'],\n",
     "                    mode='lines', name='train'))\n",
+    "if 'val_loss' in history:\n",
+    "    fig.add_trace(go.Scatter(y=history['val_loss'],\n",
+    "                    mode='lines', name='validation'))\n",
     "fig.update_layout(title='Loss trend',\n",
     "                  xaxis_title='epoch',\n",
     "                  yaxis_title='loss',\n",
