--- a/battery-rul-estimation/experiments/nasa-randomized/lstm_autoencoder_rul_nasa.ipynb
+++ b/battery-rul-estimation/experiments/nasa-randomized/lstm_autoencoder_rul_nasa.ipynb
@@ -2,16 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "source": [
-    "# RUL estimation Nasa Randomized dataset"
-   ],
    "metadata": {
     "id": "jw9FMur02UtZ"
-   }
+   },
+   "source": [
+    "# RUL estimation Nasa Randomized dataset"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "id": "XKxZ90kO2Uta"
+   },
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -53,45 +57,45 @@
     "sys.path.append(data_path)\n",
     "from data_processing.nasa_random_data import NasaRandomizedData\n",
     "from data_processing.prepare_rul_data import RulHandler"
-   ],
-   "outputs": [],
-   "metadata": {
-    "id": "XKxZ90kO2Uta"
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "### Config logging"
-   ],
    "metadata": {
     "id": "MfVCRISs2Utc"
-   }
+   },
+   "source": [
+    "### Config logging"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "id": "K2IvySBk2Utd"
+   },
+   "outputs": [],
    "source": [
     "reload(logging)\n",
     "logging.basicConfig(format='%(asctime)s [%(levelname)s]: %(message)s', level=logging.DEBUG, datefmt='%Y/%m/%d %H:%M:%S')"
-   ],
-   "outputs": [],
-   "metadata": {
-    "id": "K2IvySBk2Utd"
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "# Load Data"
-   ],
    "metadata": {
     "id": "KsbkwTX22Utf"
-   }
+   },
+   "source": [
+    "# Load Data"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "id": "NSFp-2Rl2Utj"
+   },
+   "outputs": [],
    "source": [
     "train_names_10k = [\n",
     "        'RW_Skewed_Low_Room_Temp_DataSet_2Post/data/Matlab/RW13',\n",
@@ -142,36 +146,34 @@
     "test_names_no_100k = [\n",
     "        'RW_Skewed_High_Room_Temp_DataSet_2Post/data/Matlab/RW20',\n",
     "]"
-   ],
-   "outputs": [],
-   "metadata": {
-    "id": "NSFp-2Rl2Utj"
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "id": "k-yTrXQ12Utm"
+   },
+   "outputs": [],
    "source": [
     "nasa_data_handler = NasaRandomizedData(data_path)\n",
     "rul_handler = RulHandler()"
-   ],
-   "outputs": [],
-   "metadata": {
-    "id": "k-yTrXQ12Utm"
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "# Data preparation"
-   ],
    "metadata": {
     "id": "bAAxueIqkZM9"
-   }
+   },
+   "source": [
+    "# Data preparation"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Getting data splitted by frequency\n",
     "(train_x_10k, train_y_soh_10k, test_x_10k, test_y_soh_10k, \n",
@@ -275,6 +277,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "CAPACITY_THRESHOLDS = None\n",
     "NOMINAL_CAPACITY = 2.2\n",
@@ -296,14 +300,16 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## compressing x using autoencoder"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "AUTOENCODER_WEIGHTS = '2021-07-14-11-03-54_autoencoder_nasa_randomized'\n",
     "\n",
@@ -356,20 +362,20 @@
     "train_x = train_x[:,~np.all(train_x == 0, axis=0)]\n",
     "print(\"compressed train x shape without zero column {}\".format(train_x.shape))\n",
     "print(\"compressed test x shape without zero column {}\".format(test_x.shape))"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## data preparation for lstm"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "x_norm = rul_handler.Normalization()\n",
     "train_x, test_x = x_norm.normalize(train_x, test_x)\n",
@@ -386,43 +392,45 @@
     "# first one is SOH, we keep only RUL\n",
     "train_y = train_y[:,1]\n",
     "test_y = test_y[:,1]"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## Y normalization"
-   ],
    "metadata": {
     "id": "GskElnOAxTil"
-   }
+   },
+   "source": [
+    "## Y normalization"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "id": "5EOallNnxSpQ"
+   },
+   "outputs": [],
    "source": [
     "y_norm = rul_handler.Normalization()\n",
     "train_y, test_y = y_norm.normalize(train_y, test_y)"
-   ],
-   "outputs": [],
-   "metadata": {
-    "id": "5EOallNnxSpQ"
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "# Model training"
-   ],
    "metadata": {
     "id": "7iYU-n0K2Utq"
-   }
+   },
+   "source": [
+    "# Model training"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "id": "LSx96n4w2Uts"
+   },
+   "outputs": [],
    "source": [
     "if IS_TRAINING:\n",
     "    EXPERIMENT = \"lstm_autoencoder_rul_nasa_randomized\"\n",
@@ -447,15 +455,15 @@
     "    model.summary()\n",
     "\n",
     "    model.compile(optimizer=opt, loss='huber', metrics=['mse', 'mae', 'mape', tf.keras.metrics.RootMeanSquaredError(name='rmse')])"
-   ],
-   "outputs": [],
-   "metadata": {
-    "id": "LSx96n4w2Uts"
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "id": "AIEcv6Ey2Utu"
+   },
+   "outputs": [],
    "source": [
     "if IS_TRAINING:\n",
     "    history = model.fit(train_x, train_y,\n",
@@ -464,15 +472,15 @@
     "                                verbose=1,\n",
     "                                validation_split=0\n",
     "                               )"
-   ],
-   "outputs": [],
-   "metadata": {
-    "id": "AIEcv6Ey2Utu"
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "id": "oNHlqcvP2Utx"
+   },
+   "outputs": [],
    "source": [
     "if IS_TRAINING:\n",
     "    model.save(data_path + 'results/trained_model/%s.h5' % experiment_name)\n",
@@ -482,47 +490,47 @@
     "    with open(hist_csv_file, mode='w') as f:\n",
     "        hist_df.to_csv(f)\n",
     "    history = history.history"
-   ],
-   "outputs": [],
-   "metadata": {
-    "id": "oNHlqcvP2Utx"
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "if not IS_TRAINING:\n",
     "    history = pd.read_csv(data_path + 'results/trained_model/%s_history.csv' % RESULT_NAME)\n",
     "    model = keras.models.load_model(data_path + 'results/trained_model/%s.h5' % RESULT_NAME)\n",
     "    model.summary()"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "if not IS_TRAINING:\n",
     "    with pd.option_context('display.max_rows', None, 'display.max_columns', None):\n",
     "        print(history)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "### Testing"
-   ],
    "metadata": {
     "id": "LH5RANQIEQVx"
-   }
+   },
+   "source": [
+    "### Testing"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "id": "ggNKW-VqENFN"
+   },
+   "outputs": [],
    "source": [
     "results = model.evaluate(test_x, test_y, return_dict = True)\n",
     "print(results)\n",
@@ -531,57 +539,58 @@
     "    result = model.evaluate(np.array([test_x[index, :, :]]), np.array([test_y[index]]), return_dict = True, verbose=0)\n",
     "    max_rmse = max(max_rmse, result['rmse'])\n",
     "print(\"Max rmse: {}\".format(max_rmse))"
-   ],
-   "outputs": [],
-   "metadata": {
-    "id": "ggNKW-VqENFN"
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "# Results Visualization"
-   ],
    "metadata": {
     "id": "uiqyD8Bn2Utz"
-   }
+   },
+   "source": [
+    "# Results Visualization"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "id": "jH9RrBRN2Utz"
+   },
+   "outputs": [],
    "source": [
     "fig = go.Figure()\n",
     "fig.add_trace(go.Scatter(y=history['loss'],\n",
     "                    mode='lines', name='train'))\n",
+    "if 'val_loss' in history:\n",
+    "    fig.add_trace(go.Scatter(y=history['val_loss'],\n",
+    "                    mode='lines', name='validation'))\n",
     "fig.update_layout(title='Loss trend',\n",
     "                  xaxis_title='epoch',\n",
     "                  yaxis_title='loss',\n",
     "                  width=1400,\n",
     "                  height=600)\n",
     "fig.show()"
-   ],
-   "outputs": [],
-   "metadata": {
-    "id": "jH9RrBRN2Utz"
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "id": "gtLOteXd-d6n"
+   },
+   "outputs": [],
    "source": [
     "train_predictions = model.predict(train_x)\n",
     "\n",
     "train_y = y_norm.denormalize(train_y)\n",
     "train_predictions = y_norm.denormalize(train_predictions)"
-   ],
-   "outputs": [],
-   "metadata": {
-    "id": "gtLOteXd-d6n"
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "a = 0\n",
     "for b in train_battery_range:\n",
@@ -598,13 +607,15 @@
     "                    height=600)\n",
     "    fig.show()\n",
     "    a = b"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "id": "Pe1Pzp04J1b5"
+   },
+   "outputs": [],
    "source": [
     "a = 0\n",
     "for b in train_battery_range:\n",
@@ -620,29 +631,27 @@
     "                    height=600)\n",
     "    fig.show()\n",
     "    a = b"
-   ],
-   "outputs": [],
-   "metadata": {
-    "id": "Pe1Pzp04J1b5"
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "id": "m0olyqr4-8BG"
+   },
+   "outputs": [],
    "source": [
     "test_predictions = model.predict(test_x)\n",
     "\n",
     "test_y = y_norm.denormalize(test_y)\n",
     "test_predictions = y_norm.denormalize(test_predictions)"
-   ],
-   "outputs": [],
-   "metadata": {
-    "id": "m0olyqr4-8BG"
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "a = 0\n",
     "for b in test_battery_range:\n",
@@ -659,13 +668,15 @@
     "                    height=600)\n",
     "    fig.show()\n",
     "    a = b"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "id": "uLEl8nALKAgJ"
+   },
+   "outputs": [],
    "source": [
     "a = 0\n",
     "for b in test_battery_range:\n",
@@ -681,11 +692,7 @@
     "                    height=600)\n",
     "    fig.show()\n",
     "    a = b"
-   ],
-   "outputs": [],
-   "metadata": {
-    "id": "uLEl8nALKAgJ"
-   }
+   ]
   }
  ],
  "metadata": {
@@ -695,9 +702,12 @@
    "name": "lstm_soh_prediction_only_future.ipynb",
    "provenance": []
   },
+  "interpreter": {
+   "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+  },
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.8.2 64-bit"
+   "display_name": "Python 3.8.2 64-bit",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -715,9 +725,6 @@
    "interpreter": {
     "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
    }
-  },
-  "interpreter": {
-   "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
   }
  },
  "nbformat": 4,
