--- a/battery-rul-estimation/experiments/unibo-powertools/autoencoder_unibo.ipynb
+++ b/battery-rul-estimation/experiments/unibo-powertools/autoencoder_unibo.ipynb
@@ -2,16 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "source": [
-    "# Autoencoder UNIBO Powertools Dataset"
-   ],
    "metadata": {
     "id": "jw9FMur02UtZ"
-   }
+   },
+   "source": [
+    "# Autoencoder UNIBO Powertools Dataset"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "id": "XKxZ90kO2Uta"
+   },
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -49,45 +53,45 @@
     "from data_processing.unibo_powertools_data import UniboPowertoolsData, CycleCols\n",
     "from data_processing.model_data_handler import ModelDataHandler\n",
     "from data_processing.prepare_rul_data import RulHandler"
-   ],
-   "outputs": [],
-   "metadata": {
-    "id": "XKxZ90kO2Uta"
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "### Config logging"
-   ],
    "metadata": {
     "id": "MfVCRISs2Utc"
-   }
+   },
+   "source": [
+    "### Config logging"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "id": "K2IvySBk2Utd"
+   },
+   "outputs": [],
    "source": [
     "reload(logging)\n",
     "logging.basicConfig(format='%(asctime)s [%(levelname)s]: %(message)s', level=logging.DEBUG, datefmt='%Y/%m/%d %H:%M:%S')"
-   ],
-   "outputs": [],
-   "metadata": {
-    "id": "K2IvySBk2Utd"
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "# Load Data"
-   ],
    "metadata": {
     "id": "KsbkwTX22Utf"
-   }
+   },
+   "source": [
+    "# Load Data"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "id": "DrHYRy-a2Utg"
+   },
+   "outputs": [],
    "source": [
     "dataset = UniboPowertoolsData(\n",
     "    test_types=[],\n",
@@ -97,15 +101,15 @@
     "    discharge_line=40,\n",
     "    base_path=data_path\n",
     ")"
-   ],
-   "outputs": [],
-   "metadata": {
-    "id": "DrHYRy-a2Utg"
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "id": "NSFp-2Rl2Utj"
+   },
+   "outputs": [],
    "source": [
     "train_names = [\n",
     "    '000-DM-3.0-4019-S',#minimum capacity 1.48\n",
@@ -165,15 +169,15 @@
     "\n",
     "    '041-DM-4.00-2320-S',#minimum capacity 3.76, cycles 190\n",
     "]"
-   ],
-   "outputs": [],
-   "metadata": {
-    "id": "NSFp-2Rl2Utj"
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "id": "k-yTrXQ12Utm"
+   },
+   "outputs": [],
    "source": [
     "dataset.prepare_data(train_names, test_names)\n",
     "dataset_handler = ModelDataHandler(dataset, [\n",
@@ -183,24 +187,25 @@
     "])\n",
     "\n",
     "rul_handler = RulHandler()"
-   ],
-   "outputs": [],
-   "metadata": {
-    "id": "k-yTrXQ12Utm"
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## Data preparation"
-   ],
    "metadata": {
     "id": "bAAxueIqkZM9"
-   }
+   },
+   "source": [
+    "## Data preparation"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "id": "TbntMzBZkZM9",
+    "tags": []
+   },
+   "outputs": [],
    "source": [
     "(train_x, train_y_soh, test_x, test_y_soh,\n",
     "  train_battery_range, test_battery_range,\n",
@@ -214,25 +219,24 @@
     "\n",
     "x_norm = rul_handler.Normalization()\n",
     "train_x, test_x = x_norm.normalize(train_x, test_x)"
-   ],
-   "outputs": [],
-   "metadata": {
-    "id": "TbntMzBZkZM9",
-    "tags": []
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "# Model training"
-   ],
    "metadata": {
     "id": "7iYU-n0K2Utq"
-   }
+   },
+   "source": [
+    "# Model training"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "id": "LSx96n4w2Uts"
+   },
+   "outputs": [],
    "source": [
     "if IS_TRAINING:\n",
     "    EXPERIMENT = \"autoencoder_unibo_powertools\"\n",
@@ -277,15 +281,15 @@
     "autoencoder.compile(optimizer=opt, loss='mse', metrics=['mse', 'mae', 'mape', tf.keras.metrics.RootMeanSquaredError(name='rmse')])\n",
     "autoencoder.encoder.summary()\n",
     "autoencoder.decoder.summary()"
-   ],
-   "outputs": [],
-   "metadata": {
-    "id": "LSx96n4w2Uts"
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "id": "AIEcv6Ey2Utu"
+   },
+   "outputs": [],
    "source": [
     "if IS_TRAINING:\n",
     "    history = autoencoder.fit(train_x, train_x,\n",
@@ -294,15 +298,15 @@
     "                                verbose=1,\n",
     "                                validation_split=0.1\n",
     "                               )"
-   ],
-   "outputs": [],
-   "metadata": {
-    "id": "AIEcv6Ey2Utu"
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "id": "oNHlqcvP2Utx"
+   },
+   "outputs": [],
    "source": [
     "if IS_TRAINING:\n",
     "    autoencoder.save_weights(data_path + 'results/trained_model/%s/model' % experiment_name)\n",
@@ -312,48 +316,48 @@
     "    with open(hist_csv_file, mode='w') as f:\n",
     "        hist_df.to_csv(f)\n",
     "    history = history.history"
-   ],
-   "outputs": [],
-   "metadata": {
-    "id": "oNHlqcvP2Utx"
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "if not IS_TRAINING:\n",
     "    history = pd.read_csv(data_path + 'results/trained_model/%s/history.csv' % RESULT_NAME)\n",
     "    autoencoder.load_weights(data_path + 'results/trained_model/%s/model' % RESULT_NAME)\n",
     "    autoencoder.encoder.summary()\n",
     "    autoencoder.decoder.summary()"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "if not IS_TRAINING:\n",
     "    with pd.option_context('display.max_rows', None, 'display.max_columns', None):\n",
     "        print(history)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "### Testing"
-   ],
    "metadata": {
     "id": "LH5RANQIEQVx"
-   }
+   },
+   "source": [
+    "### Testing"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "id": "ggNKW-VqENFN"
+   },
+   "outputs": [],
    "source": [
     "results = autoencoder.evaluate(test_x, test_x, return_dict = True)\n",
     "print(results)\n",
@@ -362,29 +366,30 @@
     "    result = autoencoder.evaluate(np.array([test_x[index, :, :]]), np.array([test_x[index, :, :]]), return_dict = True, verbose=0)\n",
     "    max_rmse = max(max_rmse, result['rmse'])\n",
     "print(\"Max rmse: {}\".format(max_rmse))"
-   ],
-   "outputs": [],
-   "metadata": {
-    "id": "ggNKW-VqENFN"
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "# Results Visualization"
-   ],
    "metadata": {
     "id": "uiqyD8Bn2Utz"
-   }
+   },
+   "source": [
+    "# Results Visualization"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "id": "jH9RrBRN2Utz"
+   },
+   "outputs": [],
    "source": [
     "fig = go.Figure()\n",
     "fig.add_trace(go.Scatter(y=history['loss'],\n",
     "                    mode='lines', name='train'))\n",
-    "fig.add_trace(go.Scatter(y=history['val_loss'],\n",
+    "if 'val_loss' in history:\n",
+    "    fig.add_trace(go.Scatter(y=history['val_loss'],\n",
     "                    mode='lines', name='validation'))\n",
     "fig.update_layout(title='Loss trend',\n",
     "                  xaxis_title='epoch',\n",
@@ -392,25 +397,23 @@
     "                  width=1400,\n",
     "                  height=600)\n",
     "fig.show()"
-   ],
-   "outputs": [],
-   "metadata": {
-    "id": "jH9RrBRN2Utz"
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "train_predictions = autoencoder.predict(train_x)\n",
     "labels = ['Voltage', 'Current', 'Temperature']"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "for i in range(train_x.shape[2]):\n",
     "    fig = go.Figure()\n",
@@ -424,13 +427,13 @@
     "                    width=1400,\n",
     "                    height=600)\n",
     "    fig.show()"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "for i in range(train_x.shape[2]):\n",
     "    fig = go.Figure()\n",
@@ -444,13 +447,13 @@
     "                    width=1400,\n",
     "                    height=600)\n",
     "    fig.show()"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "for i in range(train_x.shape[2]):\n",
     "    fig = go.Figure()\n",
@@ -464,23 +467,23 @@
     "                    width=1400,\n",
     "                    height=600)\n",
     "    fig.show()"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "test_predictions = autoencoder.predict(test_x)\n",
     "labels = ['Voltage', 'Current', 'Temperature']"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "for i in range(train_x.shape[2]):\n",
     "    fig = go.Figure()\n",
@@ -494,13 +497,13 @@
     "                    width=1400,\n",
     "                    height=600)\n",
     "    fig.show()"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "for i in range(train_x.shape[2]):\n",
     "    fig = go.Figure()\n",
@@ -514,13 +517,13 @@
     "                    width=1400,\n",
     "                    height=600)\n",
     "    fig.show()"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "for i in range(train_x.shape[2]):\n",
     "    fig = go.Figure()\n",
@@ -534,9 +537,7 @@
     "                    width=1400,\n",
     "                    height=600)\n",
     "    fig.show()"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   }
  ],
  "metadata": {
